fix aria spacing

--- a/wp-content/themes/ecoventura-2017/sass/sass/5.content-area/_10.cuisine.scss
+++ b/wp-content/themes/ecoventura-2017/sass/sass/5.content-area/_10.cuisine.scss
@@ -201,6 +201,7 @@
 
 				li.recipe-title.tab-item {
 					display: block;
+					margin: 1px;
 					text-indent: 0;
 
 					a {
