--- a/wp-content/themes/ecoventura-2017/style.css
+++ b/wp-content/themes/ecoventura-2017/style.css
@@ -4195,6 +4195,7 @@ p.entry-meta {
 }
 .page-template-template-eco-cuisine .our-recipes .recipes-wrapper .recipe-links li.recipe-title.tab-item {
   display: block;
+  margin: 1px;
   text-indent: 0;
 }
 .page-template-template-eco-cuisine .our-recipes .recipes-wrapper .recipe-links li.recipe-title.tab-item a {
